Fix page wrap and scroll issues

--- a/src/index.css
+++ b/src/index.css
@@ -183,6 +183,7 @@
   --page-pad-y: 50px;
   --page-pad-x: 60px;
 
+  position: relative;
   width: 210mm;
   max-width: 100%;
   box-sizing: border-box;
